# simulation-api-spec

./: .gitignore  Manifest.toml  Project.toml  README.md  docker-compose-terarium.yaml  docker-compose.yaml  env.sample  model_healthcheck.jl  openapi.yaml  pyproject.toml
.github/workflows/: report.yaml
data/datasets/: SIDARTHE_dataset.csv  traditional.csv
data/models/: LV_goat_chupacabra_regnet.json  LV_rabbits_wolves_model02_regnet.json  LV_rabbits_wolves_model03_regnet.json  LV_rabbits_wolves_regnet.json  LV_sheep_foxes_regnet.json  LacOperon.json  SEIRD_base_model01_petrinet.json  SEIRD_stockflow.json  SEIRHDS_stockflow.json  SEIRHD_NPI_Type1_petrinet.json  SEIRHD_NPI_Type2_petrinet.json  SEIRHD_base_model01_petrinet.json  SEIRHD_stockflow.json  SEIRHD_vacc_petrinet.json  SEIRHD_with_reinfection01_petrinet.json  SEIR_stockflow.json  SEIR_stockflow_no_uncertainty  SIR_param_in_observables.json  SIR_stockflow.json  beta_mean_gamma_cycle_sir_model.json  hierarchical_sir_model.json  multilevel_sir_nodist_model.json  seiarhds.json  sidarthe.json  sir-undef-var-initial.json  sir-undef-var-rate-law.json  sirhd.json
docker/: docker-compose-sim-services.yml
docker/scripts/: docker-compose-sim-services.yml
raw_models/: age_vacc_var_reinfection_v1.json  age_vacc_var_reinfection_v2.json  age_vacc_var_reinfection_v3.json
scenarios/LV-goats-chupacabra-regnet/pyciemss/: simulate.json
scenarios/LV-rabbits-wolves-model02-regnet/pyciemss/: simulate.json
test/: report.py
tests/: auth.py  rabbitmq-consumer.py  report.py  run_tests.sh  seed.py  utils.py  workflow.py
(+44 files in other folders)
