[tool.poetry]
name = "simulation-integration"
version = "2.0.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
boto3 = "^1.28.44"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
